--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8002
 spring.jpa.database=postgresql
 spring.datasource.platform=${POSTGRES_DB:emaildb}
 
-spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT:5434}/${DB_URL:emaildb}
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
+#spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT:5434}/${DB_URL:emaildb}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
