--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
     implementation 'com.sendgrid:sendgrid-java:4.10.2'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
+    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
+    implementation 'com.mailgun:mailgun-java:1.1.3'
+
 }
 
 tasks.named('test') {
