--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,7 @@ dependencies {
     implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
     implementation 'com.sendgrid:sendgrid-java:4.10.2'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
-    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
-    implementation 'com.mailgun:mailgun-java:1.1.3'
+    implementation 'com.mailersend:java-sdk:1.0.0'
 
 }
 
