--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.session.jdbc.initialize-schema=always
 spring.flyway.baseline-on-migrate=true
+server.error.include-message=always
