--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     implementation 'com.sendgrid:sendgrid-java:4.10.2'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
     implementation 'com.mailersend:java-sdk:1.0.0'
-
+    implementation 'io.springfox:springfox-swagger2:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 }
 
 tasks.named('test') {
